# mglyph-ml

./: .env.template  .gitignore  .pre-commit-config.yaml  LLM_CONTEXT.md  README.md  convert-notebook.sh  kill-jupyters.sh  lib.py  pyproject.toml  requirements.txt  training-1.ipynb
.github/workflows/: thesis-pdf.yml
bp-typst/: content.typ  lib.typ  mglyph-render.ipynb  references.bib  template.typ  thesis.typ  todo.typ
bp-typst/fig/diagrams/: .$clearml-pipeline.drawio.bkp  show-function.drawio
bp-typst/notebooks/: graphs.ipynb  mglyph-render.ipynb
bp-typst/res/: iso690-numeric-en-fitvut-short.csl  iso690-numeric-en-fitvut.csl
data/: README.md
experiments/: README.md  experiment-1.py
experiments/e1/: README.md  experiment.py  generate_dataset.py  main.py  optimizer.py  overwatcher.py  pipeline.py  prepare_data.py  train_model.py
experiments/e1/utils/: visualize_results.ipynb
notebooks/: build-dataset.ipynb  experiment-1.ipynb  experiment-base.ipynb  experiment-better-augment.ipynb  experiment-binned.ipynb  experiment-centroid-distribution.ipynb  experiment-commands.ipynb  experiment-gap.ipynb  experiment-hard-sample.ipynb  experiment-min-samples.ipynb  experiment-regression.ipynb  lanching-command.ipynb  launching-command.ipynb  training-1.ipynb  worst-case.ipynb
notebooks/data/glyphs-1/: square.mglyph
notebooks/data/glyphs-experiment-1/: test.mglyph  train.mglyph
src/mglyph_ml/: glyph_importer.py  glyph_provider.py  image_provider.py  lib.py  manifest_parsing.py  visualization.py
src/mglyph_ml/data/: glyph_dataset.py
src/mglyph_ml/dataset/: color.py  export.py  glyph_dataset.py  glyph_importer.py  manifest.py  manifest_parsing.py  utils.py
src/mglyph_ml/experiment/: README.md  commands.py  run_config.py  visualization.py
src/mglyph_ml/experiment/e1/: dataset_sampler.py  experiment.py  generate_dataset.py  overwatcher.py  (+4 more)
src/mglyph_ml/nn/: base.py  evaluation.py  glyph_dataset.py  glyph_regressor_binned.py  glyph_regressor_gen1.py  glyph_regressor_gen2.py  glyph_regressor_gen3.py  training.py  util.py  utils.py
test/: README.md  test_glyph_importer.py  test_glyph_provider.py  test_glyph_regressor_binned.py  test_image_provider.py
test/data/: square.mglyph
(+1 files in other folders)
