[project]
name = "mglyph-ml"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "mglyph>=0.5.5",
    "notebook>=7.4.7",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
